--- a/Module2/HW2 - Checkout Page/index.html
+++ b/Module2/HW2 - Checkout Page/index.html
@@ -27,7 +27,7 @@
 
 <body>
     <!-- Logo Banner -->
-    <img id="logo" src="img/earth-records.png" alt="earth records logo">
+    <img id="logo" src="img/earth.png" alt="earth records logo">
 
     <!-- NavBar -->
     <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light">
